k8s/sensu/daemonset.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: sensu-system
  name: sensu-agent
  labels:
    name: sensu-agent
spec:
  selector:
    matchLabels:
      name: sensu-agent
  template:
    metadata:
      labels:
        name: sensu-agent
    spec:
      hostPID: true
      hostIPC: true
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: sensu-agent
        image: sensu/sensu:latest
        command: ["/opt/sensu/bin/sensu-agent", "start", "--log-level=debug"]
        ports:
        - containerPort: 3030
          hostPort: 3030
          protocol: TCP
