k8s/sensu/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: sensu-system
  name: sensu-backend
spec:
  type: ClusterIP
  selector:
    app: sensu-backend
  ports:
    - name: api
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: ws
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: webui
      protocol: TCP
      port: 3000
      targetPort: 3000
